fix mime-type icon after reload

just relying on the modified signal is not good enough
that fires in a state that the document has no content or url

BUG: 489452